@@ -5,7 +5,7 @@ import java.util.List;
 import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.example.be.domain.Product;
-import org.example.be.domain.dto.productDto.ProductResponseDto;
+import org.example.be.domain.dto.SearchResponseDto;
 import org.example.be.domain.dto.searchDto.SearchRequestDto;
 import org.example.be.domain.dto.searchDto.SearchSpecification;
 import org.example.be.repository.ProductRepository;
@@ -15,19 +15,16 @@ import org.springframework.stereotype.Service;
 @RequiredArgsConstructor
 @Transactional
 public class SearchService {
-
     private final ProductRepository productRepository;
 
     // 검색 초기화면
     // keyword 를 포함한 상품 검색
-    public List<ProductResponseDto> searchProductByKeyword(String keyword) {
-        return productRepository.findByNameContainingIgnoreCase(keyword)
-            .stream()
-            .map(ProductResponseDto::fromEntity).toList();
+    public List<Product> searchProductByKeyword(String keyword){
+        return productRepository.findByNameContainingIgnoreCase(keyword);
     }
 
     // keyword 를 포함한 자동완성 검색어 추천
-    public List<String> searchSuggestion(String keyword) {
+    public List<String> searchSuggestion(String keyword){
         List<Product> products = productRepository.findByNameContainingIgnoreCase(keyword);
         return products.stream()
             .map(Product::getName)
@@ -36,9 +33,11 @@ public class SearchService {
 
     // 검색 필터 옵션
     // "키워드 + 복수 필터" 적용
-    public List<ProductResponseDto> searchProductWithFilters(SearchRequestDto request) {
+    public List<SearchResponseDto> searchProductWithFilters(SearchRequestDto request) {
         return productRepository.findAll(SearchSpecification.searchWith(request))
             .stream()
-            .map(ProductResponseDto::fromEntity).toList();
+            .map(SearchResponseDto::from)
+            .collect(Collectors.toList());
     }
+
 }
